@@ -12,7 +12,10 @@
 
 #include "dds/DCPS/dcps_export.h"
 
-#include "TransportSendStrategy.h"
+#include "BasicQueue_T.h"
+#include "TransportQueueElement.h"
+#include "TransportRetainedElement.h"
+#include "TransportReplacedElement.h"
 #include "TransportSendStrategy_rch.h"
 
 #include "ace/Message_Block.h"
@@ -32,7 +35,8 @@ namespace DCPS {
 class OpenDDS_Dcps_Export TransportSendBuffer
   : public RcObject<ACE_SYNCH_MUTEX> {
 public:
-  typedef std::pair<TransportSendStrategy::QueueType*, ACE_Message_Block*> buffer_type;
+  typedef BasicQueue<TransportQueueElement> queue_type;
+  typedef std::pair<queue_type*, ACE_Message_Block*> buffer_type;
 
   explicit TransportSendBuffer(size_t capacity,
                                size_t max_samples_per_packet);
@@ -54,7 +58,7 @@ public:
 private:
   size_t capacity_;
   
-  TransportRetainedElementAllocator sample_allocator_;
+  TransportRetainedElementAllocator retained_allocator_;
   TransportReplacedElementAllocator replaced_allocator_;
 
   TransportSendStrategy_rch strategy_;
