@@ -18,7 +18,6 @@
 
 #include "dds/DCPS/RepoIdConverter.h"
 #include "dds/DCPS/transport/framework/NetworkAddress.h"
-#include "dds/DCPS/transport/framework/TransportSendBuffer.h"
 
 namespace {
 
